--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -314,7 +313,7 @@ footer {
 <body>
     <header>
         <div class="logo-container">
-            <img src="thehealthyway.jpeg" alt="The Healthy Way">
+            <img src="IMG/thehealthyway.jpeg" alt="The Healthy Way">
             <div class="logo">The Healthy Way</div>
         </div>
         <nav>
