Adding the home page imgs

--- a/index.html
+++ b/index.html
@@ -344,19 +344,19 @@ footer {
         <h2>Best-Selling Supplements</h2>
         <div class="product-container">
             <div class="product">
-                <img src="ON_ protien.jpeg" alt="Protein Powder">
+                <img src="IMG/ON_ protien.jpeg" alt="Protein Powder">
                 <h3>Whey Protein</h3>
                 <p>$29.99</p>
                 <button class="add-to-cart" data-name="Whey Protein" data-price="29.99">Add to Cart</button>
             </div>
             <div class="product">
-                <img src="preworkout.jpg" alt="Pre-Workout">
+                <img src="IMG/preworkout.jpg" alt="Pre-Workout">
                 <h3>Pre-Workout</h3>
                 <p>$19.99</p>
                 <button class="add-to-cart" data-name="Pre-Workout" data-price="19.99">Add to Cart</button>
             </div>
             <div class="product">
-                <img src="bcaa.jpg" alt="BCAA">
+                <img src="IMG/bcaa.jpg" alt="BCAA">
                 <h3>BCAA Recovery</h3>
                 <p>$24.99</p>
                 <button class="add-to-cart" data-name="BCAA Recovery" data-price="24.99">Add to Cart</button>
