--- a/index.html
+++ b/index.html
@@ -368,15 +368,15 @@ footer {
         <h2>Why Choose The Healthy Way?</h2>
         <div class="benefit-list">
             <div class="benefit">
-                <h3> Scientifically Proven</h3>
+                <h3>🔬 Scientifically Proven</h3>
                 <p>Our supplements are backed by research for real results.</p>
             </div>
             <div class="benefit">
-                <h3> Clean & Natural</h3>
+                <h3>🌱 Clean & Natural</h3>
                 <p>No harmful additives, just high-quality ingredients.</p>
             </div>
             <div class="benefit">
-                <h3> Fast Shipping</h3>
+                <h3>🚀 Fast Shipping</h3>
                 <p>Delivered quickly so you never miss a workout.</p>
             </div>
         </div>
